--- a/daniel-cavazos-angular/src/app/add-post/add-post.component.html
+++ b/daniel-cavazos-angular/src/app/add-post/add-post.component.html
@@ -1,3 +1,3 @@
-<button mat-fab color="accent" style="position: fixed; right: 5px; z-index: 1;">
+<button mat-fab color="accent" (click)="openDialog()" style="position: fixed; right: 5px; z-index: 1;">
   <mat-icon>create</mat-icon>
 </button>
