--- a/daniel-cavazos-angular/src/app/post-field/post-field.component.html
+++ b/daniel-cavazos-angular/src/app/post-field/post-field.component.html
@@ -1,17 +1,20 @@
 <mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile *ngFor="let post of posts">
-    <a style="width: 100%; height: 100%; position: relative;" href="#">
-      <div [style.backgroundImage]="setBg(post.image)"
-       style="width: 100%; height: 100%; padding: 30px; box-sizing: border-box; background-size: cover; color: white;
-       font-family: sans-serif">
-        <h3 style="display: block;">{{post.title}}</h3>
-        <p style="display: block;">{{post.comments.length}} comments</p>
-        <p style="display: block;">{{post.shortDescription}}</p>
-        <p style="display: block; position: absolute; bottom: 0;">{{post.category}}</p>
-      </div>
-    </a>
-    <div>
-      <!-- this is where the edit and delete buttons go on hover -->
-    </div>
+  <div *ngFor="let post of posts">
+    <mat-grid-tile *ngIf="!category || post.category === 'lifestyle'" class="post">
+        <a style="width: 100%; height: 100%; position: relative;" href="#">
+          <div [style.backgroundImage]="setBg(post.image)" class="tileImage">
+            <h3 class="title">{{post.title}}</h3>
+            <p class="comments">{{post.comments.length}} comments <mat-icon>comment</mat-icon></p>
+            <p class="description">{{post.shortDescription}}</p>
+            <p class="category">{{post.category}}</p>
+          </div>
+        </a>
+        <div class="postButtons">
+          <button mat-button><mat-icon>create</mat-icon></button>
+          <button mat-button><mat-icon>delete</mat-icon></button>
+        </div>
+  <div class="overlay"></div>
   </mat-grid-tile>
+  </div>
+</mat-grid-list>
 
