--- a/daniel-cavazos-angular/src/app/filters/filters.component.scss
+++ b/daniel-cavazos-angular/src/app/filters/filters.component.scss
@@ -1,3 +1,13 @@
 .focus:focus {
   background-color: rgba(211, 211, 211, 0.5);
 }
+
+div {
+  text-align: center;
+  margin: 20px;
+}
+
+div button {
+  font-size: 16px;
+  padding: 10px 30px;
+}
