--- a/daniel-cavazos-angular/src/app/app.component.html
+++ b/daniel-cavazos-angular/src/app/app.component.html
@@ -2,8 +2,8 @@
   <p>[making your life easier]</p>
   <h1>Discovering the World</h1>
 </header>
-<router-outlet></router-outlet>
-<app-add-post (post)="getNewPost($event)"></app-add-post>
-<br>
+
+<app-add-post></app-add-post>
 <app-filters></app-filters>
-<app-post-field [addedPost]="newPost"></app-post-field>
+<app-post-field></app-post-field>
+
