--- a/daniel-cavazos-angular/src/app/post-field/post-field.component.html
+++ b/daniel-cavazos-angular/src/app/post-field/post-field.component.html
@@ -1,17 +1,15 @@
 <mat-grid-list cols="2" rowHeight="2:1">
   <div *ngFor="let post of posts">
     <mat-grid-tile *ngIf="!category || post.category === category" class="post">
-        <a style="width: 100%; height: 100%; position: relative;" href="#">
           <div [style.backgroundImage]="setBg(post.image)" class="tileImage">
             <h3 class="title">{{post.title}}</h3>
             <p class="comments">{{post.comments.length}} comments <mat-icon>comment</mat-icon></p>
             <p class="description">{{post.shortDescription}}</p>
             <p class="category">{{post.category}}</p>
           </div>
-        </a>
         <div class="postButtons">
           <button mat-button><mat-icon>create</mat-icon></button>
-          <button mat-button><mat-icon>delete</mat-icon></button>
+          <button mat-button (click)="deletePost(post)"><mat-icon>delete</mat-icon></button>
         </div>
   <div class="overlay"></div>
   </mat-grid-tile>
