--- a/daniel-cavazos-angular/src/app/post-field/post-field.component.scss
+++ b/daniel-cavazos-angular/src/app/post-field/post-field.component.scss
@@ -19,6 +19,12 @@
   opacity:0.1;
 }
 
+.tile {
+  width: 100%; 
+  height: 100%; 
+  position: relative;
+}
+
 .tileImage {
   width: 100%;
   height: 100%;
