added edit, other screen and routing

--- a/daniel-cavazos-angular/src/app/app.component.html
+++ b/daniel-cavazos-angular/src/app/app.component.html
@@ -1,9 +1,5 @@
 <header style="text-align: center">
-  <p>[making your life easier]</p>
-  <h1>Discovering the World</h1>
+    <p>[making your life easier]</p>
+    <h1>Discovering the World</h1>
 </header>
-
-<app-add-post></app-add-post>
-<app-filters></app-filters>
-<app-post-field></app-post-field>
-
+<router-outlet></router-outlet>
