--- a/daniel-cavazos-angular/src/app/post-field/post-field.component.scss
+++ b/daniel-cavazos-angular/src/app/post-field/post-field.component.scss
@@ -10,6 +10,10 @@
   background-color: transparent;
 }
 
+.fieldOfPosts {
+  position: unset;
+}
+
 .post:hover > .overlay {
   width:100%;
   height:100%;
@@ -20,8 +24,8 @@
 }
 
 .tile {
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
