--- a/daniel-cavazos-angular/src/app/post-modal/post-modal.component.html
+++ b/daniel-cavazos-angular/src/app/post-modal/post-modal.component.html
@@ -1,5 +1,4 @@
-<h1 class="createTitle" mat-dialog-title>Create Post</h1>
-<h1 class="editTitle" mat-dialog-title>Edit Post</h1>
+<h1 class="createTitle" mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
   <mat-form-field class="modalInput">
     <input matInput placeholder="Title" [(ngModel)]="post.title">
