--- a/daniel-cavazos-angular/src/app/post-field/post-field.component.html
+++ b/daniel-cavazos-angular/src/app/post-field/post-field.component.html
@@ -1,14 +1,14 @@
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="2" rowHeight="2:1" class="fieldOfPosts">
   <div *ngFor="let post of posts">
     <mat-grid-tile *ngIf="!category || post.category === category" class="post">
-          <div [style.backgroundImage]="setBg(post.image)" class="tileImage">
+          <div [style.backgroundImage]="setBg(post.image)" routerLink="/posts/{{post.id}}" class="tileImage">
             <h3 class="title">{{post.title}}</h3>
             <p class="comments">{{post.comments.length}} comments <mat-icon>comment</mat-icon></p>
             <p class="description">{{post.shortDescription}}</p>
             <p class="category">{{post.category}}</p>
           </div>
         <div class="postButtons">
-          <button mat-button><mat-icon>create</mat-icon></button>
+          <button mat-button (click)="editPost(post)"><mat-icon>create</mat-icon></button>
           <button mat-button (click)="deletePost(post)"><mat-icon>delete</mat-icon></button>
         </div>
   <div class="overlay"></div>
