front end is functional, missing backend, do in different branch just in case

--- a/daniel-cavazos-angular/src/app/post-details/details/comments/comments.component.html
+++ b/daniel-cavazos-angular/src/app/post-details/details/comments/comments.component.html
@@ -14,4 +14,6 @@
 <mat-form-field class="modalInput">
     <input matInput placeholder="Write a comment" [(ngModel)]="newComment">
 </mat-form-field>
+<br>
+<button mat-raised-button (click)="createComment()" color="primary">Create</button>
 
