--- a/daniel-cavazos-angular/src/app/post-field/post-field.component.html
+++ b/daniel-cavazos-angular/src/app/post-field/post-field.component.html
@@ -1,10 +1,10 @@
-<mat-grid-list cols="2" rowHeight="2:1" class="fieldOfPosts">
+<mat-grid-list cols="{{columns}}" rowHeight="2:1" (window:resize)="onResize()" class="fieldOfPosts">
   <div *ngFor="let post of posts">
     <mat-grid-tile *ngIf="!category || post.category === category" class="post">
           <div [style.backgroundImage]="setBg(post.image)" routerLink="/posts/{{post.id}}" class="tileImage">
-            <h3 class="title">{{post.title}}</h3>
+            <h3 class="title md-display-3">{{post.title}}</h3>
             <p class="comments">{{post.comments.length}} comments <mat-icon>comment</mat-icon></p>
-            <p class="description">{{post.shortDescription}}</p>
+            <p class="description md-display-3">{{post.shortDescription}}</p>
             <p class="category">{{post.category}}</p>
           </div>
         <div class="postButtons">
